인스타그램 검색 파싱 연결

--- a/app/src/main/res/layout/row_instagram.xml
+++ b/app/src/main/res/layout/row_instagram.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
         android:gravity="center"
         android:orientation="horizontal">
 
